--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <!-- Header Section -->
         <header>
             <h1>Welcome to Website</h1>
+            <h2>Fitur Fetch</h2>
         </header>
     
 <!-- Main Content -->
