--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <header>
             <h1>Welcome to Website</h1>
             <h2>Fitur Fetch</h2>
+            <h2>Fitur Pull</h2>
         </header>
     
 <!-- Main Content -->
